@@ -75,56 +75,65 @@ public class IntegerTCNECrossover implements CrossoverOperator<IntegerSolution> 
 
     offspring.add((IntegerSolution) parent1.copy());
     offspring.add((IntegerSolution) parent2.copy());
-    Random random = new Random();
-
+    var variableSize= offspring.get(0).variables().size();
     for (int i = 0; i < numNodes-2; i++) {
-      if (randomGenerator.nextDouble() <= probability) {
         for (int j = i + 1; j < numNodes; j++) {
-          var NodeBeginPart = offspring.get(0).variables().size() - (numNodes + 1);
-          var NodeI_S0 = nodesParent1.get(i);
-          var NodeI_S1 = nodesParent2.get(i);
-          var NodeJ_S0 = nodesParent1.get(j);
-          var NodeJ_S1 = nodesParent2.get(j);
-          var initialIndex = Equipments.getLinkPosition(i, j, numNodes, setSize);
-          var connectionSetAsAListS0 = getConnectionSetAsAList(i, j, offspring.get(0), initialIndex);
-          var connectionSetAsAListS1 = getConnectionSetAsAList(i, j, offspring.get(1), initialIndex);
-          // Node's switch crossover
-          offspring.get(0).variables().set((i + NodeBeginPart), NodeI_S1);
-          offspring.get(1).variables().set((i + NodeBeginPart), NodeI_S0);
-          offspring.get(0).variables().set((j + NodeBeginPart), NodeJ_S1);
-          offspring.get(1).variables().set((j + NodeBeginPart), NodeJ_S0);
-          var linksInSetS0 = 0;
-          var linksInSetS1 = 0;
-          //crossover of set
-          for (int l = 0; l < setSize; l++) {
-            if (connectionSetAsAListS0[l] > 0) linksInSetS0 += 1;
-            if (connectionSetAsAListS1[l] > 0) linksInSetS1 += 1;
-            offspring.get(0).variables().set(initialIndex + l, connectionSetAsAListS1[l]);
-            offspring.get(1).variables().set(initialIndex + l, connectionSetAsAListS0[l]);
-          }
-          // if set connections in the other solution is full zero
-          // remove reference in this solution file because it
-          // was crossed.
-          if (linksInSetS0 == 0) {
-            ((DefaultIntegerSolution) offspring.get(1)).file.get(i).remove(j);
-            ((DefaultIntegerSolution) offspring.get(1)).file.get(j).remove(i);
-          } else {
-            // if set connections in the other solution is not zero
-            // add a reference in this solution file because it
-            // was crossed. If it is already exists no problem, because set
-            // don't add duplicate registers.
-            ((DefaultIntegerSolution) offspring.get(1)).file.get(i).add(j);
-            ((DefaultIntegerSolution) offspring.get(1)).file.get(j).add(i);
-          }
-          if (linksInSetS1 == 0) {
-            ((DefaultIntegerSolution) offspring.get(0)).file.get(i).remove(j);
-            ((DefaultIntegerSolution) offspring.get(0)).file.get(j).remove(i);
-          } else {
-            ((DefaultIntegerSolution) offspring.get(0)).file.get(i).add(j);
-            ((DefaultIntegerSolution) offspring.get(0)).file.get(j).add(i);
+          if (randomGenerator.nextInt(100) <= probability) {
+            if(j==1){
+             var tail=  variableSize-1;
+              int lastAleloOne= offspring.getFirst().variables().get(tail);
+              int lastAleloTwo= offspring.get(1).variables().get(tail);
+              offspring.getFirst().variables().set(tail,lastAleloTwo);
+              offspring.get(1).variables().set(tail,lastAleloOne);
+            }
+
+            var NodeBeginPart = variableSize - (numNodes + 1);
+            var NodeI_S0 = nodesParent1.get(i);
+            var NodeI_S1 = nodesParent2.get(i);
+            var NodeJ_S0 = nodesParent1.get(j);
+            var NodeJ_S1 = nodesParent2.get(j);
+            var initialIndex = Equipments.getLinkPosition(i, j, numNodes, setSize);
+            var connectionSetAsAListS0 = getConnectionSetAsAList(offspring.get(0), initialIndex);
+            var connectionSetAsAListS1 = getConnectionSetAsAList(offspring.get(1), initialIndex);
+            // Node's switch crossover
+            offspring.get(0).variables().set((i + NodeBeginPart), NodeI_S1);
+            offspring.get(1).variables().set((i + NodeBeginPart), NodeI_S0);
+            offspring.get(0).variables().set((j + NodeBeginPart), NodeJ_S1);
+            offspring.get(1).variables().set((j + NodeBeginPart), NodeJ_S0);
+            var linksInSetS0 = 0;
+            var linksInSetS1 = 0;
+            //crossover of set
+            for (int l = 0; l < setSize; l++) {
+              if (connectionSetAsAListS0[l] > 0) linksInSetS0 += 1;
+              if (connectionSetAsAListS1[l] > 0) linksInSetS1 += 1;
+              offspring.get(0).variables().set(initialIndex + l, connectionSetAsAListS1[l]);
+              offspring.get(1).variables().set(initialIndex + l, connectionSetAsAListS0[l]);
+            }
+            // maintenance of files:
+            // if set connections in the other solution is full zero
+            // remove reference in this solution file because it
+            // was crossed.
+            if (linksInSetS0 == 0) {
+              ((DefaultIntegerSolution) offspring.get(1)).file.get(i).remove(j);
+              ((DefaultIntegerSolution) offspring.get(1)).file.get(j).remove(i);
+            } else {
+              // if set connections in the other solution is not zero
+              // add a reference in this solution file because it
+              // was crossed. If it is already exists no problem, because set
+              // don't add duplicate registers.
+              ((DefaultIntegerSolution) offspring.get(1)).file.get(i).add(j);
+              ((DefaultIntegerSolution) offspring.get(1)).file.get(j).add(i);
+            }
+            if (linksInSetS1 == 0) {
+              ((DefaultIntegerSolution) offspring.get(0)).file.get(i).remove(j);
+              ((DefaultIntegerSolution) offspring.get(0)).file.get(j).remove(i);
+            } else {
+              ((DefaultIntegerSolution) offspring.get(0)).file.get(i).add(j);
+              ((DefaultIntegerSolution) offspring.get(0)).file.get(j).add(i);
+            }
           }
         }
-      }
+
     }
     return offspring;
   }
@@ -148,12 +157,10 @@ public class IntegerTCNECrossover implements CrossoverOperator<IntegerSolution> 
    * this method returns a connection set
    * as a list of integers
    *
-   * @param i
-   * @param j
    * @param parent
    * @param initialIndex
    */
-  private Integer[] getConnectionSetAsAList(int i, int j, IntegerSolution parent, int initialIndex) {
+  private Integer[] getConnectionSetAsAList( IntegerSolution parent, int initialIndex) {
     Integer[] set = new Integer[setSize];
     for (int w = 0; w < setSize; w++) {
       set[w] = parent.variables().get(initialIndex + w);
